test: Corregir y descomentar pruebas unitarias, implementar resiliencia ante caídas de Redis y configurar CI con JDK 21