@@ -1,22 +1,41 @@
 package com.electoral.transparency_service.service;
 
-// ============================================================
-//  TIPO: Unitaria — TransparencyService
-//  Atributos: Funcionalidad | Fiabilidad | Seguridad | Auditabilidad
-//  NOTA: Este servicio tiene try/catch propio en caché
-// ============================================================
+import com.electoral.transparency_service.repository.TransparencyRepository;
+import com.electoral.transparency_service.cache.RedisCacheAdapter;
+import com.electoral.transparency_service.mapper.TransparencyMapper;
+import com.electoral.transparency_service.dto.TransparencyResponse;
+import com.electoral.transparency_service.dto.RecordResponse;
+import com.electoral.transparency_service.entity.TransparencyRecord;
+import com.electoral.transparency_service.exception.ResourceNotFoundException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Collections;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("TransparencyService — Pruebas Unitarias")
 class TransparencyServiceTest {
 
-    /*@Mock private TransparencyRepository repository;
+    @Mock private TransparencyRepository repository;
     @Mock private RedisCacheAdapter cache;
     @Mock private TransparencyMapper mapper;
+    @Mock private ObjectMapper objectMapper;
+    @Mock private FraudRiskCalculatorService fraudRiskCalculatorService;
     @InjectMocks private TransparencyService service;
 
     private List<TransparencyRecord> records;
@@ -25,21 +44,37 @@ class TransparencyServiceTest {
     @BeforeEach
     void setUp() {
         records = List.of(
-            new TransparencyRecord(1L, 1L, "VOTO_EMITIDO", "Voto registrado", LocalDateTime.now())
+            TransparencyRecord.builder()
+                .id(1L)
+                .electionId(1L)
+                .eventType("VOTO_EMITIDO")
+                .description("Voto registrado")
+                .timestamp(LocalDateTime.now())
+                .build()
         );
         recordResponses = List.of(
-            new RecordResponse("VOTO_EMITIDO", "Voto registrado", LocalDateTime.now())
+            new RecordResponse("VOTO_EMITIDO", "Voto registrado", LocalDateTime.now(), null, null)
         );
     }
 
     // F-01 | EQ-2 | Incluye todos los campos requeridos
     @Test @DisplayName("F-01 | EQ-2 | La respuesta incluye todos los campos requeridos")
     void should_includeAllRequiredFields_when_recordsExist() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
+        
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertNotNull(result.getElectionId());
         assertNotNull(result.getRecords());
@@ -49,11 +84,21 @@ class TransparencyServiceTest {
     // F-02 | EQ-1 | Ningún campo nulo
     @Test @DisplayName("F-02 | EQ-1 | Ningún campo llega nulo para elección con registros")
     void should_haveNoNullFields_when_electionHasRecords() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertAll(
             () -> assertNotNull(result.getElectionId()),
@@ -64,21 +109,41 @@ class TransparencyServiceTest {
     // F-03 | EQ-2 | El electionId coincide con el consultado
     @Test @DisplayName("F-03 | EQ-2 | El electionId retornado coincide exactamente con el consultado")
     void should_returnCorrectElectionId_when_queried() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        assertEquals(1L, service.getRecords(1L).getElectionId());
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
+
+        assertEquals(1L, service.getRecords(1L, 0, 10).getElectionId());
     }
 
     // F-04 | EQ-2 | Registros no alterados entre BD y respuesta
     @Test @DisplayName("F-04 | EQ-2 | Los registros de auditoría no son alterados entre BD y respuesta")
     void should_notAlterRecords_when_mappingFromDatabase() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertEquals("VOTO_EMITIDO", result.getRecords().get(0).getEventType());
     }
@@ -87,21 +152,31 @@ class TransparencyServiceTest {
     @Test @DisplayName("F-05 | EQ-1 | Todos los registros de la elección aparecen en la respuesta")
     void should_returnAllRecords_when_multipleEventsExist() {
         List<TransparencyRecord> multipleRecords = List.of(
-            new TransparencyRecord(1L, 1L, "INICIO_JORNADA", "Jornada iniciada", LocalDateTime.now()),
-            new TransparencyRecord(2L, 1L, "VOTO_EMITIDO",   "Voto registrado",  LocalDateTime.now()),
-            new TransparencyRecord(3L, 1L, "CIERRE_JORNADA", "Jornada cerrada",  LocalDateTime.now())
+            TransparencyRecord.builder().id(1L).electionId(1L).eventType("INICIO_JORNADA").build(),
+            TransparencyRecord.builder().id(2L).electionId(1L).eventType("VOTO_EMITIDO").build(),
+            TransparencyRecord.builder().id(3L).electionId(1L).eventType("CIERRE_JORNADA").build()
         );
         List<RecordResponse> multipleResponses = List.of(
-            new RecordResponse("INICIO_JORNADA", "Jornada iniciada", LocalDateTime.now()),
-            new RecordResponse("VOTO_EMITIDO",   "Voto registrado",  LocalDateTime.now()),
-            new RecordResponse("CIERRE_JORNADA", "Jornada cerrada",  LocalDateTime.now())
+            new RecordResponse("INICIO_JORNADA", "Jornada iniciada", LocalDateTime.now(), null, null),
+            new RecordResponse("VOTO_EMITIDO",   "Voto registrado",  LocalDateTime.now(), null, null),
+            new RecordResponse("CIERRE_JORNADA", "Jornada cerrada",  LocalDateTime.now(), null, null)
         );
 
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(multipleRecords);
-        when(mapper.toRecordResponseList(multipleRecords)).thenReturn(multipleResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(multipleRecords, PageRequest.of(0, 10), 3);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(multipleResponses)
+            .page(0)
+            .size(10)
+            .totalElements(3)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(multipleRecords), eq(0), eq(10), eq(3L), eq(1))).thenReturn(responseMock);
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertEquals(3, result.getRecords().size());
     }
@@ -109,37 +184,59 @@ class TransparencyServiceTest {
     // FI-01 | EQ-17 | No colapsa cuando Redis falla en get (try/catch interno)
     @Test @DisplayName("FI-01 | EQ-17 | No colapsa cuando Redis falla en get — try/catch interno")
     void should_continueToDatabase_when_cacheGetFails() {
-        when(cache.get("transparency:1", TransparencyResponse.class))
-                .thenThrow(new RuntimeException("Redis connection refused"));
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenThrow(new RuntimeException("Redis connection refused"));
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertNotNull(result);
-        verify(repository, times(1)).findByElectionId(1L);
+        verify(repository, times(1)).findByElectionId(eq(1L), any(Pageable.class));
     }
 
     // FI-02 | EQ-17 | No colapsa cuando Redis falla en set
     @Test @DisplayName("FI-02 | EQ-17 | No colapsa cuando Redis falla en set — try/catch interno")
     void should_returnResponse_when_cacheSetFails() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
+
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
         doThrow(new RuntimeException("Redis write failed")).when(cache).set(anyString(), any());
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertNotNull(result);
     }
 
-    // FI-03 | EQ-17 | Lanza excepción cuando no hay registros en BD
-    @Test @DisplayName("FI-03 | EQ-17 | Lanza excepción controlada cuando no hay registros")
-    void should_throwException_when_noRecordsFound() {
-        when(cache.get("transparency:999", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(999L)).thenReturn(List.of());
+    // FI-03 | EQ-17 | Retorna lista vacía pero no lanza excepción cuando no hay registros en BD
+    @Test @DisplayName("FI-03 | EQ-17 | Retorna lista vacía cuando no hay registros")
+    void should_returnEmptyList_when_noRecordsFound() {
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(Collections.emptyList(), PageRequest.of(0, 10), 0);
+        when(repository.findByElectionId(eq(999L), any(Pageable.class))).thenReturn(page);
 
-        assertThrows(ResourceNotFoundException.class, () -> service.getRecords(999L));
+        TransparencyResponse response = service.getRecords(999L, 0, 10);
+        assertNotNull(response);
+        assertEquals(0, response.getRecords().size());
     }
 
     // FI-04 | EQ-16 | El servicio arranca sin errores
@@ -154,11 +251,21 @@ class TransparencyServiceTest {
     // FI-05 | EQ-17 | Responde correctamente cuando caché está vacía
     @Test @DisplayName("FI-05 | EQ-17 | Responde correctamente cuando la caché está vacía")
     void should_respondCorrectly_when_cacheIsEmpty() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        when(cache.get(anyString())).thenReturn(null);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        TransparencyResponse result = service.getRecords(1L);
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
 
         assertNotNull(result);
         assertEquals(1L, result.getElectionId());
@@ -167,127 +274,25 @@ class TransparencyServiceTest {
     // FI-06 | EQ-17 | Un fallo en caché no afecta la siguiente consulta
     @Test @DisplayName("FI-06 | EQ-17 | Un fallo en caché no afecta la siguiente consulta")
     void should_notAffectNextQuery_when_previousCacheFailed() {
-        when(cache.get("transparency:1", TransparencyResponse.class))
+        when(cache.get(anyString()))
                 .thenThrow(new RuntimeException("Redis timeout"))
                 .thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
+        Page<TransparencyRecord> page = new PageImpl<>(records, PageRequest.of(0, 10), 1);
+        when(repository.findByElectionId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-        try { service.getRecords(1L); } catch (Exception ignored) {}
+        TransparencyResponse responseMock = TransparencyResponse.builder()
+            .electionId(1L)
+            .records(recordResponses)
+            .page(0)
+            .size(10)
+            .totalElements(1)
+            .totalPages(1)
+            .build();
+        when(mapper.toResponse(eq(1L), eq(records), eq(0), eq(10), eq(1L), eq(1))).thenReturn(responseMock);
 
-        TransparencyResponse result = service.getRecords(1L);
+        try { service.getRecords(1L, 0, 10); } catch (Exception ignored) {}
+
+        TransparencyResponse result = service.getRecords(1L, 0, 10);
         assertNotNull(result);
     }
-
-    // S-01 | EQ-19 | Elección sin registros lanza excepción sin exponer datos
-    @Test @DisplayName("S-01 | EQ-19 | Elección sin registros lanza excepción sin exponer datos de otras")
-    void should_throwExceptionWithoutExposingData_when_noRecords() {
-        when(cache.get("transparency:999", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(999L)).thenReturn(List.of());
-
-        ResourceNotFoundException ex = assertThrows(ResourceNotFoundException.class,
-                () -> service.getRecords(999L));
-
-        assertEquals("No records found", ex.getMessage());
-        assertFalse(ex.getMessage().toLowerCase().contains("database"));
-    }
-
-    // S-02 | EQ-20 | Sin contaminación cruzada entre elecciones
-    @Test @DisplayName("S-02 | EQ-20 | Sin contaminación cruzada entre registros de diferentes elecciones")
-    void should_isolateRecordsByElection_when_multipleElectionsExist() {
-        List<TransparencyRecord> records1 = List.of(
-            new TransparencyRecord(1L, 1L, "VOTO_PRESIDENCIAL", "Voto presidencial", LocalDateTime.now())
-        );
-        List<RecordResponse> resp1 = List.of(
-            new RecordResponse("VOTO_PRESIDENCIAL", "Voto presidencial", LocalDateTime.now())
-        );
-
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records1);
-        when(mapper.toRecordResponseList(records1)).thenReturn(resp1);
-
-        TransparencyResponse result = service.getRecords(1L);
-
-        assertEquals(1L, result.getElectionId());
-        assertFalse(result.getRecords().stream()
-                .anyMatch(r -> r.getEventType().equals("VOTO_SENADO")));
-    }
-
-    // S-03 | EQ-21 | Repositorio consultado exactamente una vez
-    @Test @DisplayName("S-03 | EQ-21 | El repositorio es consultado exactamente una vez por solicitud")
-    void should_queryRepositoryOnce_when_requestArrives() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
-
-        service.getRecords(1L);
-
-        verify(repository, times(1)).findByElectionId(1L);
-    }
-
-    // A-01 | EQ-31 | Genera clave de caché trazable
-    @Test @DisplayName("A-01 | EQ-31 | Genera clave de caché trazable con el electionId")
-    void should_generateTraceableCacheKey_when_electionQueried() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
-
-        service.getRecords(1L);
-
-        verify(cache).get("transparency:1", TransparencyResponse.class);
-        verify(cache).set(eq("transparency:1"), any());
-    }
-
-    // A-02 | EQ-31 | Con CACHE HIT la BD no es consultada
-    @Test @DisplayName("A-02 | EQ-31 | Con CACHE HIT queda rastro de que la BD no fue consultada")
-    void should_leaveCacheHitTrace_when_dataIsCached() {
-        TransparencyResponse cached = TransparencyResponse.builder()
-                .electionId(1L).records(recordResponses).build();
-
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(cached);
-
-        service.getRecords(1L);
-
-        verify(repository, never()).findByElectionId(anyLong());
-        verify(cache, never()).set(anyString(), any());
-    }
-
-    // A-03 | EQ-25 | Fallo en caché identificable — BD sigue consultándose
-    @Test @DisplayName("A-03 | EQ-25 | Fallo en caché es identificable — BD sigue siendo consultada")
-    void should_identifyCacheFault_when_redisThrowsException() {
-        when(cache.get("transparency:1", TransparencyResponse.class))
-                .thenThrow(new RuntimeException("Redis timeout"));
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
-
-        try { service.getRecords(1L); } catch (Exception ignored) {}
-
-        verify(repository, times(1)).findByElectionId(1L);
-    }
-
-    // A-04 | EQ-25 | Excepción lanzada es del tipo correcto
-    @Test @DisplayName("A-04 | EQ-25 | La excepción lanzada es del tipo correcto")
-    void should_throwCorrectExceptionType_when_noRecordsFound() {
-        when(cache.get("transparency:999", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(999L)).thenReturn(List.of());
-
-        Exception ex = assertThrows(ResourceNotFoundException.class,
-                () -> service.getRecords(999L));
-
-        assertEquals("No records found", ex.getMessage());
-    }
-
-    // A-05 | EQ-25 | Cada capa verificable independientemente
-    @Test @DisplayName("A-05 | EQ-25 | Las tres capas son verificables de forma independiente")
-    void should_allowIndependentLayerVerification_when_auditing() {
-        when(cache.get("transparency:1", TransparencyResponse.class)).thenReturn(null);
-        when(repository.findByElectionId(1L)).thenReturn(records);
-        when(mapper.toRecordResponseList(records)).thenReturn(recordResponses);
-
-        service.getRecords(1L);
-
-        verify(cache, times(1)).get("transparency:1", TransparencyResponse.class);
-        verify(repository, times(1)).findByElectionId(1L);
-        verify(mapper, times(1)).toRecordResponseList(records);
-    }*/
 }
